# eora

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml
eora/: app.py  main.py
eora/config/: base.py
eora/dto/: answers.py  questions.py
eora/redis/: redis.py
eora/routers/: answers.py  web.py  ws.py
eora/schemas/: answers.py
eora/services/: answers.py  llm.py  portfolio.py
eora/templates/: chat.html
